syntax = "proto3";

package eureka.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/manabie-com/backend/pkg/manabuf/eureka/v1;epb";

message RetrieveLearningProgressRequest {
  string student_id = 1;
  string session_id = 2;
  google.protobuf.Timestamp from = 3;
  google.protobuf.Timestamp to = 4;
}

message RetrieveLearningProgressResponse {
  message DailyLearningTime {
    int64 total_time_spent_in_day = 1;
    google.protobuf.Timestamp day = 2;
  }
  repeated DailyLearningTime dailies = 1;
}

service StudentLearningTimeReader {
  rpc RetrieveLearningProgress(RetrieveLearningProgressRequest)
      returns (RetrieveLearningProgressResponse);
}
